--- a/css/style.css
+++ b/css/style.css
@@ -2979,7 +2979,7 @@ b {
 .blog__details__text__item h5 {
     color: #777777;
     font-weight: 600;
-    margin-bottom: 12px;
+    /* margin-bottom: 12px; */
 }
 
 .blog__details__text__item p {
