--- a/css/style.css
+++ b/css/style.css
@@ -152,7 +152,7 @@ p {
     font-family: "Poppins", sans-serif;
     color: #666666;
     font-weight: 400;
-    line-height: 25px;
+    line-height: 1.5;
     margin: 0 0 15px 0;
     text-align: justify;
 }
