--- a/css/style.css
+++ b/css/style.css
@@ -1212,7 +1212,7 @@ li .dropdown .active a {
     width: 360px;
     min-height: 400px;
     background: #fff;
-    box-shadow: 15px 15px 60px rgba(0, 0, 0, .15);
+    /* box-shadow: 15px 15px 60px rgba(0, 0, 0, .15); */
     padding: 20px;
 }
 
