--- a/css/style.css
+++ b/css/style.css
@@ -4385,6 +4385,11 @@ a.sub-arrow {
         display: block;
     }
 
+    .banner-1 {
+        padding: 0;
+        margin: 0;
+    }
+
     .dropdown-submenu .submenu {
         display: none;
         top: 0;
