--- a/css/style.css
+++ b/css/style.css
@@ -590,6 +590,7 @@ li a i {
     visibility: visible;
 }
 
+
 .header__menu ul li:last-child {
     margin-right: 0;
 }
@@ -730,6 +731,10 @@ li a i {
     display: none;
 }
 
+ul.dropdown.menu.grav.vacina {
+    left: unset !important;
+}
+
 .dropdown.menu {
     display: flex;
     background-color: white !important;
@@ -823,7 +828,7 @@ li .dropdown .active a {
 /* BANNER  */
 
 .banner-1 {
-    padding: 175px;
+    /* padding: 175px; */
     margin: 1rem;
     border-radius: 20px;
     background-size: cover;
@@ -1533,11 +1538,23 @@ b {
     align-items: center;
 }
 
+
 .services__details__pic img {
     width: 100%;
     height: auto;
     display: block;
     border-radius: 8px;
+}
+
+.services__details__pic .img {
+    width: 100%;
+    height: auto;
+    display: block;
+    border-radius: 8px;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: top center;
+    height: 100%;
 }
 
 .services__details__content {
@@ -2496,6 +2513,10 @@ b {
 }
 
 .services__details__pic img {
+    min-width: 100%;
+}
+
+.services__details__pic .img {
     min-width: 100%;
 }
 
@@ -4405,7 +4426,18 @@ a.sub-arrow {
         object-fit: cover;
     }
 
+    .services__details__pic .img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+        background-position-x: right;
+    }
+
     .services__details__content img {
+        display: block !important;
+    }
+
+    .services__details__content .img {
         display: block !important;
     }
 
