--- a/css/style.css
+++ b/css/style.css
@@ -4622,3 +4622,31 @@ a.sub-arrow {
 .accept-btn:hover {
     background-color: #f4a261;
 }
+
+@media (min-width: 768px) and (max-width: 1023px) {
+    .container {
+        max-width: 80% !important;
+        zoom: 80%;
+    }
+
+}
+
+@media (min-width: 992px) {
+
+    .container,
+    .container-lg,
+    .container-md,
+    .container-sm {
+        max-width: 80% !important;
+        zoom: 80%;
+    }
+
+}
+
+@media (min-width: 576px) {
+
+    .container,
+    .container-sm {
+        max-width: 90%;
+    }
+}
