--- a/css/style.css
+++ b/css/style.css
@@ -4633,3 +4633,9 @@ a.sub-arrow {
         zoom: 80%;
     }
 }
+
+@media (min-width: 768px) and (max-width: 1366px) {
+    .container {
+        max-width: 95%;
+    }
+}
