--- a/css/style.css
+++ b/css/style.css
@@ -4636,6 +4636,7 @@ a.sub-arrow {
 
 @media (min-width: 768px) and (max-width: 1366px) {
     .container {
-        max-width: 95%;
+        max-width: 95% !important;
+        ;
     }
 }
